# agentkit-cli

./: .agentkit-last-run.json  .agentkit.toml  .cursorrules  .gitignore  AGENTS.md  BLOCKER-REPORT-v0.99.0.md  BUILD-REPORT-v0.28.0.md  BUILD-REPORT-v0.41.0.md  BUILD-REPORT-v0.60.0.md  BUILD-REPORT-v0.61.0.md  BUILD-REPORT-v0.62.0.md  BUILD-REPORT-v0.63.0.md  BUILD-REPORT-v0.64.0.md  BUILD-REPORT-v0.65.0.md  BUILD-REPORT-v0.66.0.md  BUILD-REPORT-v0.67.0.md  BUILD-REPORT-v0.68.0.md  BUILD-REPORT-v0.69.0.md  BUILD-REPORT-v0.70.0.md  BUILD-REPORT-v0.71.0.md  BUILD-REPORT-v0.72.0.md  BUILD-REPORT-v0.73.0.md  BUILD-REPORT-v0.74.0.md  BUILD-REPORT-v0.75.0.md  BUILD-REPORT-v0.76.0.md  BUILD-REPORT-v0.77.0.md  BUILD-REPORT-v0.78.0.md  BUILD-REPORT-v0.79.0.md  BUILD-REPORT-v0.80.0.md  BUILD-REPORT-v0.81.0.md  BUILD-REPORT-v0.81.1.md  BUILD-REPORT-v0.82.0.md  BUILD-REPORT-v0.83.0.md  BUILD-REPORT-v0.84.0.md  BUILD-REPORT-v0.84.1.md  BUILD-REPORT-v0.85.0.md  BUILD-REPORT-v0.86.0.md  BUILD-REPORT-v0.88.0.md  BUILD-REPORT-v0.89.0.md  BUILD-REPORT-v0.90.0.md  (+179 more)
.agentkit/: source.md
.github/workflows/: daily-pages-refresh.yml  update-leaderboard.yml  update-pages.yml
agentkit_cli/: __init__.py  analyze.py  api_server.py  benchmark.py  benchmark_report.py  bundle.py  burn.py  burn_adapters.py  campaign.py  campaign_report.py  certify.py  certify_report.py  changelog_engine.py  checks_client.py  checks_formatter.py  clarify.py  closeout.py  composite.py  config.py  context_projections.py  contracts.py  daily_duel.py  digest.py  digest_report.py  dispatch.py  doctor.py  duel.py  duel_report.py  existing_scorer.py  explain.py  framework_templates.py  frameworks.py  gate.py  gist_publisher.py  github_api.py  harden_report.py  history.py  hooks.py  hot.py  improve_engine.py  (+71 more)
agentkit_cli/commands/: analyze_cmd.py  api_cmd.py  badge_cmd.py  benchmark_cmd.py  bundle_cmd.py  burn.py  campaign_cmd.py  certify_cmd.py  changelog_cmd.py  checks_cmd.py  ci.py  clarify_cmd.py  closeout_cmd.py  compare_cmd.py  config_cmd.py  contract_cmd.py  daily_cmd.py  daily_duel_cmd.py  demo_cmd.py  dispatch_cmd.py  (+86 more)
docs/: api.md  data.json  index.html  leaderboard.html  sitemap.xml  weekly.md
examples/: agentkit-ci.yml  agentkit-quality.yml
scripts/: post-daily-duel.sh  post-hot.sh  post-pr-comment.py  post-spotlight.sh  post-weekly.sh  run-agentkit-action.py
site/: index.html
tests/: test_action.py  test_analyze.py  test_analyze_share.py  test_api_server_d1.py  test_api_server_d2.py  test_api_server_d3.py  test_api_server_d4.py  test_badge.py  test_benchmark_d1.py  test_benchmark_d2.py  test_benchmark_d3.py  test_benchmark_d4.py  test_benchmark_d5.py  test_bundle.py  test_burn_adapters.py  test_burn_command.py  test_burn_engine.py  test_burn_report.py  test_campaign.py  test_campaign_cmd.py  test_campaign_history.py  test_campaign_report.py  test_certify_badge.py  test_certify_cmd.py  test_certify_d5.py  test_certify_engine.py  test_certify_report.py  test_changelog_cmd_d2.py  test_changelog_d5.py  test_changelog_engine_d1.py  test_changelog_github_d4.py  test_changelog_integration.py  test_checks_client.py  test_checks_cmd.py  test_checks_formatter.py  test_checks_integration.py  test_ci.py  test_clarify.py  test_clarify_cmd.py  test_clarify_workflow.py  (+314 more)
(+181 files in other folders)
