[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-cli"
version = "1.13.0"
description = "Unified CLI for the Agent Quality Toolkit (agentmd, coderace, agentlint, agentreflect)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mikiships", email = "frank.michaels2123@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0.0",
]
keywords = ["ai", "agents", "llm", "cli", "toolkit", "quality", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/mikiships/agentkit-cli"
Repository = "https://github.com/mikiships/agentkit-cli"
Changelog = "https://github.com/mikiships/agentkit-cli/blob/main/CHANGELOG.md"

[project.scripts]
agentkit = "agentkit_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentkit_cli"]

[tool.pytest.ini_options]
markers = [
    "smoke: golden smoke tests for release gating",
]
norecursedirs = ["tests/fixtures"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "pytest>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]
